tests/negative/neg_own_observe_requires_access.safe
-- Test: neg_own_observe_requires_access
-- Description: Explicit `.all` dereference syntax is removed in PR11.8e.
-- Expected: REJECT parser_error

package observe_requires_access_test

   type config is record
      rate : integer
      next : config

   function bad_observe
      owner : not null config = (rate = 100, next = null)

      return owner.all.rate
